# platformer

./: .gitignore  .gitmodules  CMakeLists.txt  debug.sh  release.sh
src/: main.cpp  window.hpp
